--- a/templates/index.html
+++ b/templates/index.html
@@ -165,9 +165,9 @@
                                    oninput="validateGrades()">
                         </div>
                         {% endfor %}
-                        <div class="total-count mt-2">
+                        <!-- <div class="total-count mt-2">
                             Total Theory Count: <span id="theory-total">0</span>
-                        </div>
+                        </div> -->
                     </div>
                     
                     <div class="practical-grades">
