--- a/templates/index.html
+++ b/templates/index.html
@@ -130,7 +130,9 @@
                             <label for="dept" class="required-field">Department</label>
                             <select id="dept" name="dept" class="form-select" required>
                                 <option value="">Select Department</option>
+                                <option value="CSE">Computer Science and Engineering (CSE)</option>
                                 <option value="CE">Computer Engineering (CE)</option>
+                                <option value="IT">Information Technology (IT)</option>
                             </select>
                         </div>
                         <div class="col-md-6">
