--- a/templates/index.html
+++ b/templates/index.html
@@ -144,6 +144,7 @@
                                 <option value="">Select Semester</option>
                                 <option value="3">3</option>
                                 <option value="5">5</option>
+                                <option value="7">7</option>
                             </select>
                         </div>
                     </div>
